gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail42.d
version https://git-lfs.github.com/spec/v1
oid sha256:0d8413a083c106e35e3e3d7fb99c85b74f91e9564fecd95fc6b9075c89bbc4d9
size 234
